# Stellar-Paradigm

./: .gitignore  .surgeignore  CNAME  Copy-Paste Board.docx  FEEDBACK_SUMMARY.md  IDEA_2_SUBMISSION.docx  IDEA_2_SUBMISSION.html  IDEA_2_SUBMISSION.md  LICENSE  README.md  WALLET_VERIFICATION.md  Word_Scramble_Upgrade_Strategy.docx  daily-words.js  feedback.js  index.html  manifest.json  package.json  script.js  stellar.js  style.css  sw.js  themes.css  wallet-guide.js  ~$py-Paste Board.docx  ~$rd_Scramble_Upgrade_Strategy.docx
.github/scripts/: check-contract-calls.js
.github/workflows/: cd.yml  ci.yml
Idea Submissions/: IDEA_2_SUBMISSION.docx  IDEA_2_SUBMISSION.html  IDEA_2_SUBMISSION.md  Word_Scramble_Upgrade_Strategy.docx
Word Scramble Boards Inspired/stitch_tactile_wooden_word_scramble/atomic_woodcraft/: DESIGN.md
Word Scramble Boards Inspired/stitch_tactile_wooden_word_scramble/coastal_board_focus_updated/: code.html
Word Scramble Boards Inspired/stitch_tactile_wooden_word_scramble/nordic_oak_board_focus_empty/: code.html
fonts/: OpenDyslexic-LICENSE.txt  tile-fonts.css
screenshots/: README.txt
word-scramble-contract/: README.md
word-scramble-contract/contracts/leaderboard-contract/: Cargo.toml
word-scramble-contract/contracts/leaderboard-contract/src/: lib.rs
word-scramble-contract/contracts/leaderboard-contract/test_snapshots/tests/: test_leaderboard_sorted_highest_first.1.json  test_score_does_not_decrease.1.json  test_submit_score_mints_badge_via_reward_contract.1.json
word-scramble-contract/contracts/reward-contract/: Cargo.toml
(+8 files in other folders)
