[package]
name = "leaderboard-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
reward-contract = { path = "../reward-contract" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
reward-contract = { path = "../reward-contract", features = ["testutils"] }
